# Lesson5

./: README.md  REPORT.md  pyproject.toml
.mypy_cache/3.13/: random.data.json  random.meta.json  statistics.data.json  statistics.meta.json
.mypy_cache/3.13/executing/: __init__.data.json  __init__.meta.json  _position_node_finder.data.json  _position_node_finder.meta.json  executing.data.json  executing.meta.json
.mypy_cache/3.13/filelock/: _api.data.json  _api.meta.json  _soft.data.json  _soft.meta.json  _unix.data.json  _unix.meta.json  _windows.data.json  _windows.meta.json
.mypy_cache/3.13/http/: cookiejar.data.json  cookiejar.meta.json
.mypy_cache/3.13/jinja2/: async_utils.data.json  async_utils.meta.json  utils.data.json  utils.meta.json
.mypy_cache/3.13/logging/: config.data.json  config.meta.json
.mypy_cache/3.13/matplotlib/: _afm.data.json  _afm.meta.json
.mypy_cache/3.13/multiprocessing/: popen_fork.data.json  popen_fork.meta.json  popen_spawn_win32.data.json  popen_spawn_win32.meta.json  util.data.json  util.meta.json
.mypy_cache/3.13/pure_eval/: core.data.json  core.meta.json  my_getattr_static.data.json  my_getattr_static.meta.json
.mypy_cache/3.13/pyparsing/: results.data.json  results.meta.json
.mypy_cache/3.13/stack_data/: utils.data.json  utils.meta.json
.mypy_cache/3.13/traitlets/: traitlets.data.json  traitlets.meta.json
.mypy_cache/3.13/urllib/: request.data.json  request.meta.json
src/homework/: additional training.ipynb  augmentation_pipeline.ipynb  dataset_analysis.ipynb  standard_augmentations.ipynb
(+76 files in other folders)
